force-app/main/default/objects/Marketing_Cloud_Journey_Event_Settings__c/fields/Credit_Confirmation_EventType__c.field-meta.xml
<CustomField>
    <fullName>Credit_Confirmation_EventType__c</fullName>
    <label>Credit Confirmation EventType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>