force-app/main/default/objects/Marketing_Cloud_Journey_Event_Settings__c/fields/Credit_Confirmation_Key__c.field-meta.xml
<CustomField>
    <fullName>Credit_Confirmation_Key__c</fullName>
    <description>API Key for the Credit Confirmation Journey</description>
    <label>Credit Confirmation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>