force-app/main/default/objects/Marketing_Cloud_Journey_Event_Settings__c/fields/Credit_Drop_EventType__c.field-meta.xml
<CustomField>
    <fullName>Credit_Drop_EventType__c</fullName>
    <description>Credit Drop course event type.</description>
    <inlineHelpText>Credit Drop course event type.</inlineHelpText>
    <label>Credit Drop EventType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>